establish ground framework

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -70,7 +70,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    
   }
 
   /* Remove the padding we set earlier */
@@ -87,5 +87,10 @@ body {
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
+    min-height: 80vh;
   }
+}
+/* Welcome image */
+.image-welcome {
+  height: 15vh;
 }
