--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,7 @@
-<p>This is the about view.</p>
+<div class="jumbotron">
+  <h3>Blaues Boot</h3>
+  <p class="lead">
+    <img class="image-welcome"src="images/blaues.png" alt="we are blau"><br>
+    Blaues Boot is about building new creative solutions for the world. We strive to build meaningful products that enable ideas to come to life. 
+  </p>
+</div>
