clean sass and old stuff

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,8 @@
 <div class="jumbotron">
+  <img class="image-welcome" src="/images/blaues.png" alt="we are blau">
+  </br>
   <h3>Blaues Boot</h3>
-  <p class="lead">
-    <img class="image-welcome" src="/images/blaues.png" alt="we are blau"><br>
-    Blaues Boot is about building new creative solutions for the world. We strive to build meaningful products that enable ideas to come to life. 
+  <p class="lead">Blaues Boot is about building creative solutions for the world. We strive to build meaningful products that enable people to bring their ideas to life. 
   </p>
+    
 </div>
