--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,11 +10,15 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
+/* Body Parts (BG, Headings, Fonts etc*/
+////////////////////////////////////////
+
 body {
   padding: 0;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
+/* Don't know about that one yet: Everything but the jumbotron gets side spacing for mobile first views */
+
 .header,
 .marketing,
 .footer {
@@ -22,35 +26,78 @@ body {
   padding-right: 15px;
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+/* Make the masthead heading the same height as the navigation */
 
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
+h3 {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
-  }
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
+/* Links */
 
 .container-narrow > hr {
   margin: 30px 0;
 }
 
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  .container {
+    
+  }
+
+/* Remove the padding we set earlier */
+.header,
+.marketing,
+.footer {
+    padding-left: 0;
+    padding-right: 0;
+}
+/* Space out the masthead */
+.header {
+    margin-bottom: 30px;
+}
+  
+}
+/* Welcome image */
+.image-welcome {
+  height: 15vh;
+}
+
+/* Header */
+////////////
+.header {
+  border-color: #fff;
+}
+
+.navbar {
+  margin-bottom: 0px;
+  background-color: #fff;
+  border-color: #fff;
+  border-size: 0px;
+}
+
+#logo {
+  max-width: 40px;
+  margin-top: 5px;
+  margin-left: 10px;
+  display: inline;
+  float: left;
+  
+}
+
+/* Container */
+///////////////
+.jumbotron {
+    border-bottom: 0;
+    min-height: 75vh;
+    
+  }
 /* Main marketing message and sign up button */
 .jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
+  text-align: left;
+  
 
   .btn {
     font-size: 21px;
@@ -67,30 +114,15 @@ body {
   }
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    
-  }
+/* Footer */
+////////////
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
 
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-    min-height: 80vh;
-  }
-}
-/* Welcome image */
-.image-welcome {
-  height: 15vh;
-}
+
+
+
