--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,9 @@
 <div class="jumbotron">
+  <img class="image-welcome" src="/images/blaues.png" alt="we are blau">
+  </br>
   <h3>Blaues Boot</h3>
-  <p class="lead">
-    <img class="image-welcome" src="/images/blaues.png" alt="we are blau"><br>
-    Cutting through randomness.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Ahoi<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p class="lead">Cutting through randomness.</p>
+  <!-- <p><a class="btn btn-lg btn-success" ng-href="#/">Ahoi<span class="glyphicon glyphicon-ok"></span></a></p> -->
 </div>
 
 
