--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,6 @@
-<div class="jumbotron">
-  <img class="image-welcome" src="/images/blaues.png" alt="we are blau">
-  </br>
-  <h3>Blaues Boot</h3>
-  <p class="lead">Cutting through randomness.</p>
-  <!-- <p><a class="btn btn-lg btn-success" ng-href="#/">Ahoi<span class="glyphicon glyphicon-ok"></span></a></p> -->
+<div class="container">
+  <h2>My todos</h2>
+  <p class="form-group" ng-repeat="todo in todos">
+    <input type="text" ng-model="todo" class="form-control">
+  </p>
 </div>
-
-
