--- a/app/views/sources.html
+++ b/app/views/sources.html
@@ -1,7 +1,19 @@
-<div class="jumbotron">
-  <h3>Blaues Boot</h3>
-  <p class="lead">
-    <img class="image-welcome" src="/images/blaues.png" alt="we are blau"><br>
-    List of sources.
+<div class="container" >
+  <h3>Sources</h3>
+  <!-- Todos input -->
+  <form role="form" ng-submit="addTopic()">
+    <div class="row">
+      <div class="input-group">
+        <input type="text" ng-model="topic" placeholder="What needs to be done?" class="form-control">
+        <span class="input-group-btn">
+          <input type="submit" class="btn btn-primary" value="Add">
+        </span>
+      </div>
+    </div>
+  </form>
+  </br>
+  <p class="form-group" ng-repeat="topic in topics">
+  <input type="text" ng-model="topic" class="form-control">
   </p>
 </div>
+
