--- a/app/views/sources.html
+++ b/app/views/sources.html
@@ -14,6 +14,9 @@
   </br>
   <p class="form-group" ng-repeat="topic in topics">
   <input type="text" ng-model="topic" class="form-control">
+  <span class="input-group-btn">
+    <button class="btn btn-danger" ng-click="removeTopic($index)" aria-label="Remove">X</button>
+  </span>
   </p>
 </div>
 
